@@ -1,4 +1,5 @@
 - diskdrake:
+  o add a GRUB_BIOS partitions if needed (mga#18656)
   o MBR limit really is 2TiB, not 4, so use GPT for disks > 2TiB
 
 Version 17.34 - 6 June 2016
